# napoleon

./: .gitignore  CLAUDE.md  pyproject.toml
.claude-plugin/: marketplace.json
dashboard/: README.md  components.json  package.json  svelte.config.js  vite.config.ts
dashboard/src/: Architecture.md  app.css
dashboard/src/lib/: utils.ts
dashboard/src/pages/overview/: CapacityTimeline.svelte  GanttDetailPanel.svelte  GanttTaskBar.svelte  NextUpPanel.svelte  OverviewPage.svelte  OverviewPageContract.ts  ProjectCard.svelte  QuickEstimate.svelte  ReadinessPanel.svelte  utils.ts
dashboard/src/routes/: +page.svelte
plugins/napoleon/.claude-plugin/: plugin.json
plugins/napoleon/commands/: napoleon.md
src/haiv_project/: __init__.py
src/haiv_project/commands/: __init__.py
src/napoleon/: __main__.py  serve.py
src/napoleon/dashboard/: index.html  overview.js  planning.js
tests/: __init__.py  test_example.py  test_serve.py
users/casey/state/minds/napoleon/work/: immediate-plan.md  long-term-vision.md  my-process.md
worktrees/: .gitignore
