
[project]
name = "haiv-project"
version = "0.1.0"
description = "Project-level haiv commands and configuration"
requires-python = ">=3.12"
dependencies = [
    "haiv-lib>=0.3.3,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/haiv_project"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
