[project]
name = "napoleon"
version = "0.1.0"
description = "Personal project intelligence. Strategy, not status."
requires-python = ">=3.10"
dependencies = ["aiohttp"]
authors = [
    { name = "Casey Marquis" }
]

[project.scripts]
napoleon = "napoleon.__main__:main"
nb = "napoleon.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/napoleon"]
